--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "firebase": "^9.15.0",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "typescript": "4.9.4"
   }
 }
