--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.10.1",
+    "@mantine/hooks": "^5.10.1",
     "@next/font": "13.1.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "firebase": "^9.15.0",
     "next": "13.1.2",
+    "next-auth": "^4.18.10",
     "react": "18.2.0",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "typescript": "4.9.4"
