--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "typescript": "4.9.4"
+    "typescript": "^5.0.0-dev.20230130",
+    "typings": "^2.1.1"
   }
 }
