--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react-dom": "18.0.10",
     "firebase": "^9.15.0",
     "next": "13.1.2",
+    "next-images": "^1.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "swr": "^2.0.3",
     "typescript": "4.9.4"
   }
 }
