--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
+    "@headlessui/react": "^1.7.8",
     "@mantine/core": "^5.10.1",
     "@mantine/hooks": "^5.10.1",
     "@mantine/next": "^5.10.1",
     "@next/font": "13.1.2",
+    "@nextui-org/react": "^1.0.0-beta.12",
     "@tabler/icons": "^1.119.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -23,6 +25,7 @@
     "next": "13.1.2",
     "next-auth": "^4.18.10",
     "react": "18.2.0",
+    "react-aria": "^3.22.0",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
