--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "firebase": "^9.15.0",
+    "google": "^2.1.0",
+    "neo4j-driver": "^5.5.0",
     "next": "13.1.2",
     "next-auth": "^4.18.10",
+    "next-images": "^1.8.4",
     "react": "18.2.0",
     "react-aria": "^3.22.0",
-    "next-images": "^1.8.4",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
