--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "next-auth": "^4.18.10",
     "next-images": "^1.8.4",
     "nextjs-cors": "^2.1.2",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-aria": "^3.22.0",
+    "react-csv": "^2.2.2",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
@@ -37,6 +39,7 @@
     "typings": "^2.1.1"
   },
   "devDependencies": {
+    "@types/react-csv": "^1.1.3",
     "typescript": "^4.9.5"
   }
 }
