--- a/package.json
+++ b/package.json
@@ -9,20 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
+    "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
     "@headlessui/react": "^1.7.8",
-    "@mantine/core": "^5.10.1",
-    "@mantine/hooks": "^5.10.1",
-    "@mantine/next": "^5.10.1",
+    "@mantine/core": "^6.0.4",
+    "@mantine/dates": "^6.0.4",
+    "@mantine/hooks": "^6.0.4",
     "@next/font": "13.1.2",
     "@nextui-org/react": "^1.0.0-beta.12",
     "@tabler/icons": "^1.119.0",
+    "@tabler/icons-react": "^2.11.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "firebase": "^9.15.0",
+    "chart.js": "^4.2.1",
+    "dayjs": "^1.11.7",
     "google": "^0.6.0",
+    "mantine-react-table": "^0.9.5",
     "neo4j-driver": "^5.5.0",
     "next": "13.1.2",
     "next-auth": "^4.18.10",
@@ -31,14 +34,15 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-aria": "^3.22.0",
+    "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.1.1",
     "react-table": "^7.8.0",
     "typings": "^2.1.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/react-csv": "^1.1.3",
     "typescript": "^4.9.5"
   }
