--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "610-scouting-app-2023",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
