--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "chart.js": "^4.2.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "dayjs": "^1.11.7",
     "google": "^0.6.0",
     "mantine-react-table": "^0.9.5",
